fetch id from authorised context